[gd_scene load_steps=7 format=3 uid="uid://eia61wwgijm2"]

[ext_resource type="FontVariation" uid="uid://cht0lhbb6rug8" path="res://assets/icon.tres" id="1_5fasr"]
[ext_resource type="Script" path="res://ui/inventory.gd" id="1_xf7jg"]
[ext_resource type="PackedScene" uid="uid://c5v7bfdsm3pgn" path="res://ui/slot.tscn" id="3_d2j0m"]
[ext_resource type="PackedScene" uid="uid://bsatf5hbpv82" path="res://tooltip.tscn" id="14_k1nk8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0d7x"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.6, 0.6, 0.6, 0.768627)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_7dl1p"]
font = ExtResource("1_5fasr")
font_size = 48

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xf7jg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
layout_mode = 2
ratio = 1.8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n0d7x")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AspectRatioContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Monster" type="Control" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Torso" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.3
offset_top = -93.0
offset_right = 61.7
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 2

[node name="LegR" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.7
offset_top = 70.0
offset_right = 110.7
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 5

[node name="LegL" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.3
offset_top = 70.0
offset_right = -31.3
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 5

[node name="FeetL" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.3
offset_top = 156.0
offset_right = -30.3
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 3

[node name="FeetR" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 33.7
offset_top = 156.0
offset_right = 113.7
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 3

[node name="ArmR" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 104.7
offset_top = -145.0
offset_right = 184.7
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 5

[node name="HandR" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 103.7
offset_top = -51.0
offset_right = 183.7
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 4

[node name="HandL" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.3
offset_top = -61.0
offset_right = -96.3
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 4

[node name="ArmL" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.3
offset_top = -158.0
offset_right = -96.3
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 5

[node name="Head" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Monster" instance=ExtResource("3_d2j0m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.3
offset_top = -238.0
offset_right = 51.7
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
slot_type = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Stats" type="Control" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats"]
columns = 2

[node name="LabelDamage" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Damage:"

[node name="Damage" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "11
"
horizontal_alignment = 2

[node name="LabelArmor" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Armor:"

[node name="Armor" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "11
"
horizontal_alignment = 2

[node name="LabelHealth" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Health:"

[node name="Health" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "11
"
horizontal_alignment = 2

[node name="LabelAttackSpeed" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Attack Speed: "

[node name="AttackSpeed" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "11
"
horizontal_alignment = 2

[node name="LabelHealthRegen" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Health Regen: "

[node name="HealthRegen" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Stats/GridContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "11
"
horizontal_alignment = 2

[node name="VSeparator" type="PanelContainer" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="Slot2" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot3" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot4" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot5" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot6" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot7" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot8" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot9" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot10" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot11" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot12" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot13" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot14" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot15" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot16" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot17" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot18" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot19" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot20" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot21" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("3_d2j0m")]
layout_mode = 2

[node name="Slot21" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer" instance=ExtResource("3_d2j0m")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
delete = true

[node name="Label" type="Label" parent="MarginContainer/AspectRatioContainer/PanelContainer/MarginContainer/Slot21"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "delete"
label_settings = SubResource("LabelSettings_7dl1p")

[node name="Button" type="Button" parent="MarginContainer/AspectRatioContainer/PanelContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_5fasr")
theme_override_font_sizes/font_size = 24
text = "close"

[node name="Items" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Node2D" type="Node2D" parent="."]

[node name="HBoxContainer" type="Control" parent="Node2D"]
layout_mode = 3
anchors_preset = 0
offset_right = 350.0
offset_bottom = 166.0
scale = Vector2(1, 1.0598)
mouse_filter = 2

[node name="TooltipCompare" parent="Node2D/HBoxContainer" instance=ExtResource("14_k1nk8")]
layout_mode = 1
size_flags_horizontal = 4

[node name="Tooltip" parent="Node2D/HBoxContainer" instance=ExtResource("14_k1nk8")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_right = 0.0
grow_horizontal = 0
